--- a/part1/MNISTStarter.ipynb
+++ b/part1/MNISTStarter.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,11 +30,11 @@
       "metadata": {
         "id": "m4eZDEIAx0aH",
         "colab_type": "code",
+        "outputId": "6d69f6a2-47fa-4e71-921d-e305d019d3d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "80b9c9e0-b23f-4be8-dfaa-239b0b7338d6"
+        }
       },
       "source": [
         "try:\n",
@@ -58,11 +59,11 @@
       "metadata": {
         "id": "ITCcIDcJx02Q",
         "colab_type": "code",
+        "outputId": "5bacfa32-668e-4d73-af16-eabf1e34df62",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "396abf8e-11b3-4767-9539-b053dfc9bbf5"
+          "height": 697
+        }
       },
       "source": [
         "import tensorflow as tf\n",
@@ -74,38 +75,74 @@
         "print(\"--Process data--\")\n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
         "\n",
+        "\n",
         "print(\"--Make model--\")\n",
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
-        "  tf.keras.layers.Dense(10, activation='sigmoid')\n",
+        "  tf.keras.layers.Dense(500, activation='relu'),\n",
+        "  tf.keras.layers.Dense(300, activation = 'relu'),\n",
+        "  tf.keras.layers.Dense(10, activation='softmax')\n",
         "])\n",
-        "model.compile(optimizer='sgd', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "optim = tf.keras.optimizers.SGD(learning_rate=0.01, momentum=0.9)\n",
+        "\n",
+        "model.compile(optimizer=optim, loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "print(\"--Fit model--\")\n",
-        "model.fit(x_train, y_train, epochs=1, verbose=2)\n",
+        "history = model.fit(x_train, y_train, epochs=15, verbose=2)\n",
+        "\n",
+        "print(f\"Train Accuracy: {history.history.get('accuracy')[14]*100:.2f}\")\n",
         "\n",
         "print(\"--Evaluate model--\")\n",
         "model_loss, model_acc = model.evaluate(x_test,  y_test, verbose=2)\n",
         "print(f\"Model Loss:    {model_loss:.2f}\")\n",
         "print(f\"Model Accuray: {model_acc*100:.1f}%\")"
       ],
-      "execution_count": 2,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "--Get data--\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n",
             "--Process data--\n",
             "--Make model--\n",
             "--Fit model--\n",
             "Train on 60000 samples\n",
-            "60000/60000 - 4s - loss: 1.0697 - accuracy: 0.7586\n",
+            "Epoch 1/15\n",
+            "60000/60000 - 4s - loss: 0.2525 - accuracy: 0.9250\n",
+            "Epoch 2/15\n",
+            "60000/60000 - 4s - loss: 0.0982 - accuracy: 0.9704\n",
+            "Epoch 3/15\n",
+            "60000/60000 - 4s - loss: 0.0649 - accuracy: 0.9798\n",
+            "Epoch 4/15\n",
+            "60000/60000 - 4s - loss: 0.0462 - accuracy: 0.9858\n",
+            "Epoch 5/15\n",
+            "60000/60000 - 4s - loss: 0.0330 - accuracy: 0.9901\n",
+            "Epoch 6/15\n",
+            "60000/60000 - 4s - loss: 0.0233 - accuracy: 0.9933\n",
+            "Epoch 7/15\n",
+            "60000/60000 - 4s - loss: 0.0177 - accuracy: 0.9950\n",
+            "Epoch 8/15\n",
+            "60000/60000 - 4s - loss: 0.0117 - accuracy: 0.9970\n",
+            "Epoch 9/15\n",
+            "60000/60000 - 4s - loss: 0.0087 - accuracy: 0.9979\n",
+            "Epoch 10/15\n",
+            "60000/60000 - 4s - loss: 0.0052 - accuracy: 0.9992\n",
+            "Epoch 11/15\n",
+            "60000/60000 - 4s - loss: 0.0039 - accuracy: 0.9993\n",
+            "Epoch 12/15\n",
+            "60000/60000 - 4s - loss: 0.0024 - accuracy: 0.9998\n",
+            "Epoch 13/15\n",
+            "60000/60000 - 4s - loss: 0.0016 - accuracy: 0.9999\n",
+            "Epoch 14/15\n",
+            "60000/60000 - 4s - loss: 0.0011 - accuracy: 1.0000\n",
+            "Epoch 15/15\n",
+            "60000/60000 - 4s - loss: 8.8247e-04 - accuracy: 1.0000\n",
+            "Train Accuracy: 100.00\n",
             "--Evaluate model--\n",
-            "10000/1 - 0s - loss: 0.4892 - accuracy: 0.8721\n",
-            "Model Loss:    0.57\n",
-            "Model Accuray: 87.2%\n"
+            "10000/1 - 1s - loss: 0.0306 - accuracy: 0.9843\n",
+            "Model Loss:    0.06\n",
+            "Model Accuray: 98.4%\n"
           ],
           "name": "stdout"
         }
@@ -116,56 +153,67 @@
       "metadata": {
         "id": "uqKuNbSJEaWc",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "91a6d916-63ac-4c84-dc8a-c418b1cc02b5"
+        "colab": {}
       },
       "source": [
         "#Save Model to MNIST.h5\n"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model Loss:    0.57\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0Vc4ePZwERJW",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 299
-        },
-        "outputId": "7e25df24-7e17-4d9f-fe54-f6a743791fb0"
+        "colab": {}
       },
       "source": [
-        "from google.colab import files\n",
-        "files.download('MNIST.h5')"
+        "#from google.colab import files\n",
+        "#files.download('MNIST.h5')"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-95d729e15b7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'MNIST.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36mdownload\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    142\u001b[0m       \u001b[0;32mraise\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mFileNotFoundError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=undefined-variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m   \u001b[0mstarted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_threading\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEvent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: Cannot find file: MNIST.h5"
-          ]
-        }
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cGHGXsOiQ451",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Changes:**\n",
+        "\n",
+        "\n",
+        "1.   Added two hidden Dense layers to model.\n",
+        "  * One with 500 units\n",
+        "  * One with 300 units\n",
+        "  * Both using Rectified Linear Unit activation function\n",
+        "\n",
+        "2.   Changed output layer activation function to softmax instead of sigmoid\n",
+        "\n",
+        "3.   Changed the momentum of the optimization alg from 0 to 0.9\n",
+        "\n",
+        "4.   Changed epoch to 15\n",
+        "\n",
+        "Loss algorithm is still the same (sparse categorical crossentropy)\n",
+        "\n",
+        "Run by putting \n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ajZBlSl5e52v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
