--- a/part1/MNISTStarter.ipynb
+++ b/part1/MNISTStarter.ipynb
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "m4eZDEIAx0aH",
         "colab_type": "code",
-        "outputId": "6d69f6a2-47fa-4e71-921d-e305d019d3d9",
+        "outputId": "65cf3215-5743-4262-a322-35a6d7a6c1d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -59,10 +59,10 @@
       "metadata": {
         "id": "ITCcIDcJx02Q",
         "colab_type": "code",
-        "outputId": "5bacfa32-668e-4d73-af16-eabf1e34df62",
+        "outputId": "640821a1-8be2-4a07-9380-a6964e9577ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 697
+          "height": 731
         }
       },
       "source": [
@@ -98,49 +98,51 @@
         "print(f\"Model Loss:    {model_loss:.2f}\")\n",
         "print(f\"Model Accuray: {model_acc*100:.1f}%\")"
       ],
-      "execution_count": 37,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "--Get data--\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n",
             "--Process data--\n",
             "--Make model--\n",
             "--Fit model--\n",
             "Train on 60000 samples\n",
             "Epoch 1/15\n",
-            "60000/60000 - 4s - loss: 0.2525 - accuracy: 0.9250\n",
+            "60000/60000 - 6s - loss: 0.2520 - accuracy: 0.9260\n",
             "Epoch 2/15\n",
-            "60000/60000 - 4s - loss: 0.0982 - accuracy: 0.9704\n",
+            "60000/60000 - 4s - loss: 0.1000 - accuracy: 0.9696\n",
             "Epoch 3/15\n",
-            "60000/60000 - 4s - loss: 0.0649 - accuracy: 0.9798\n",
+            "60000/60000 - 4s - loss: 0.0646 - accuracy: 0.9806\n",
             "Epoch 4/15\n",
-            "60000/60000 - 4s - loss: 0.0462 - accuracy: 0.9858\n",
+            "60000/60000 - 4s - loss: 0.0466 - accuracy: 0.9859\n",
             "Epoch 5/15\n",
-            "60000/60000 - 4s - loss: 0.0330 - accuracy: 0.9901\n",
+            "60000/60000 - 4s - loss: 0.0332 - accuracy: 0.9899\n",
             "Epoch 6/15\n",
-            "60000/60000 - 4s - loss: 0.0233 - accuracy: 0.9933\n",
+            "60000/60000 - 4s - loss: 0.0250 - accuracy: 0.9926\n",
             "Epoch 7/15\n",
-            "60000/60000 - 4s - loss: 0.0177 - accuracy: 0.9950\n",
+            "60000/60000 - 4s - loss: 0.0175 - accuracy: 0.9949\n",
             "Epoch 8/15\n",
-            "60000/60000 - 4s - loss: 0.0117 - accuracy: 0.9970\n",
+            "60000/60000 - 4s - loss: 0.0129 - accuracy: 0.9966\n",
             "Epoch 9/15\n",
-            "60000/60000 - 4s - loss: 0.0087 - accuracy: 0.9979\n",
+            "60000/60000 - 4s - loss: 0.0089 - accuracy: 0.9978\n",
             "Epoch 10/15\n",
-            "60000/60000 - 4s - loss: 0.0052 - accuracy: 0.9992\n",
+            "60000/60000 - 4s - loss: 0.0056 - accuracy: 0.9988\n",
             "Epoch 11/15\n",
-            "60000/60000 - 4s - loss: 0.0039 - accuracy: 0.9993\n",
+            "60000/60000 - 4s - loss: 0.0041 - accuracy: 0.9992\n",
             "Epoch 12/15\n",
             "60000/60000 - 4s - loss: 0.0024 - accuracy: 0.9998\n",
             "Epoch 13/15\n",
-            "60000/60000 - 4s - loss: 0.0016 - accuracy: 0.9999\n",
+            "60000/60000 - 4s - loss: 0.0015 - accuracy: 0.9999\n",
             "Epoch 14/15\n",
             "60000/60000 - 4s - loss: 0.0011 - accuracy: 1.0000\n",
             "Epoch 15/15\n",
-            "60000/60000 - 4s - loss: 8.8247e-04 - accuracy: 1.0000\n",
+            "60000/60000 - 4s - loss: 8.6231e-04 - accuracy: 1.0000\n",
             "Train Accuracy: 100.00\n",
             "--Evaluate model--\n",
-            "10000/1 - 1s - loss: 0.0306 - accuracy: 0.9843\n",
+            "10000/1 - 1s - loss: 0.0302 - accuracy: 0.9838\n",
             "Model Loss:    0.06\n",
             "Model Accuray: 98.4%\n"
           ],
@@ -188,7 +190,7 @@
         "1.   Added two hidden Dense layers to model.\n",
         "  * One with 500 units\n",
         "  * One with 300 units\n",
-        "  * Both using Rectified Linear Unit activation function\n",
+        "  * Both using Rectified Linear Unit activation function (ReLU)\n",
         "\n",
         "2.   Changed output layer activation function to softmax instead of sigmoid\n",
         "\n",
@@ -198,22 +200,12 @@
         "\n",
         "Loss algorithm is still the same (sparse categorical crossentropy)\n",
         "\n",
-        "Run by putting \n",
-        "\n"
+        "\\\n",
+        "\n",
+        "**Run Instructions:**\n",
+        "\n",
+        "#TODO\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ajZBlSl5e52v",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
