--- a/part2/notMNISTStarter.ipynb
+++ b/part2/notMNISTStarter.ipynb
@@ -99,9 +99,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 697
         },
-        "outputId": "35cabdc6-6c08-4888-f04f-ba9097bad797"
+        "outputId": "8e26d18a-9c31-428b-c69d-a6e87a17aa35"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -119,19 +119,24 @@
         "print(\"--Make model--\")\n",
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
-        "  tf.keras.layers.Dense(10, activation='sigmoid')\n",
+        "  tf.keras.layers.Dense(500, activation='relu'),\n",
+        "  tf.keras.layers.Dense(300, activation='relu'),\n",
+        "  tf.keras.layers.Dense(10, activation='softmax')\n",
         "])\n",
-        "model.compile(optimizer='sgd', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "optim = tf.keras.optimizers.SGD(learning_rate=0.01, momentum=0.9)\n",
+        "\n",
+        "model.compile(optimizer=optim, loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "print(\"--Fit model--\")\n",
-        "model.fit(x_train, y_train, epochs=1, verbose=2)\n",
+        "model.fit(x_train, y_train, epochs=15, verbose=2)\n",
         "\n",
         "print(\"--Evaluate model--\")\n",
         "model_loss, model_acc = model.evaluate(x_test,  y_test, verbose=2)\n",
         "print(f\"Model Loss:    {model_loss:.2f}\")\n",
         "print(f\"Model Accuray: {model_acc*100:.1f}%\")"
       ],
-      "execution_count": 4,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,11 +147,40 @@
             "--Make model--\n",
             "--Fit model--\n",
             "Train on 60000 samples\n",
-            "60000/60000 - 4s - loss: 0.9422 - accuracy: 0.7584\n",
+            "Epoch 1/15\n",
+            "60000/60000 - 11s - loss: 0.5773 - accuracy: 0.8295\n",
+            "Epoch 2/15\n",
+            "60000/60000 - 12s - loss: 0.4343 - accuracy: 0.8686\n",
+            "Epoch 3/15\n",
+            "60000/60000 - 11s - loss: 0.3744 - accuracy: 0.8861\n",
+            "Epoch 4/15\n",
+            "60000/60000 - 11s - loss: 0.3327 - accuracy: 0.8976\n",
+            "Epoch 5/15\n",
+            "60000/60000 - 11s - loss: 0.2956 - accuracy: 0.9075\n",
+            "Epoch 6/15\n",
+            "60000/60000 - 11s - loss: 0.2611 - accuracy: 0.9186\n",
+            "Epoch 7/15\n",
+            "60000/60000 - 11s - loss: 0.2342 - accuracy: 0.9259\n",
+            "Epoch 8/15\n",
+            "60000/60000 - 10s - loss: 0.2084 - accuracy: 0.9339\n",
+            "Epoch 9/15\n",
+            "60000/60000 - 11s - loss: 0.1843 - accuracy: 0.9423\n",
+            "Epoch 10/15\n",
+            "60000/60000 - 11s - loss: 0.1615 - accuracy: 0.9503\n",
+            "Epoch 11/15\n",
+            "60000/60000 - 11s - loss: 0.1403 - accuracy: 0.9572\n",
+            "Epoch 12/15\n",
+            "60000/60000 - 10s - loss: 0.1239 - accuracy: 0.9623\n",
+            "Epoch 13/15\n",
+            "60000/60000 - 11s - loss: 0.1101 - accuracy: 0.9669\n",
+            "Epoch 14/15\n",
+            "60000/60000 - 10s - loss: 0.1002 - accuracy: 0.9698\n",
+            "Epoch 15/15\n",
+            "60000/60000 - 11s - loss: 0.0878 - accuracy: 0.9742\n",
             "--Evaluate model--\n",
-            "10000/1 - 0s - loss: 0.3375 - accuracy: 0.8746\n",
-            "Model Loss:    0.52\n",
-            "Model Accuray: 87.5%\n"
+            "10000/1 - 1s - loss: 0.1384 - accuracy: 0.9388\n",
+            "Model Loss:    0.28\n",
+            "Model Accuray: 93.9%\n"
           ],
           "name": "stdout"
         }
