--- a/part2/predict_test.ipynb
+++ b/part2/predict_test.ipynb
@@ -250,7 +250,7 @@
         "     x_test, y_test = data\n",
         "     print(f\"--Load Model {sys.argv[2]}--\")\n",
         "     #Load the model that should be in sys.argv[2]\n",
-        "     model = None     \n",
+        "     model = tf.keras.models.load_model(sys.argv[2])\n",
         "     pick = input(f\"Pick test_image (0 -> {len(x_test)-1}):\")\n",
         "     while pick.isdigit() and int(pick) >= 0 and int(pick) < len(x_test):\n",
         "        pick = int(pick)\n",
@@ -264,9 +264,9 @@
         "def predict(model, class_names, img, true_label):\n",
         "    img = np.array([img])\n",
         "    #Replace these two lines with code to make a prediction\n",
-        "    prediction = [1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10]\n",
+        "    prediction = model.predict(img)  #[1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10]\n",
         "    #Determine what the predicted label is\n",
-        "    predicted_label = 0\n",
+        "    predicted_label = np.argmax(prediction)\n",
         "    plot(class_names, prediction, true_label, predicted_label, img[0])\n",
         "    plt.show()\n",
         "main()"
