Changed 3 lines to make file work.

--- a/part2/predict.ipynb
+++ b/part2/predict.ipynb
@@ -37,9 +37,48 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "TK1sY0RoEy0_",
+        "colab_type": "code",
+        "outputId": "8949bfc3-16a3-445c-f1b9-ed85413b0bb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        }
+      },
+      "source": [
+        "!git init\n",
+        "!git remote add origin https://github.com/ErickPower/CPSC501-Assignment4.git\n",
+        "!git pull origin master"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n",
+            "remote: Enumerating objects: 51, done.\u001b[K\n",
+            "remote: Counting objects: 100% (51/51), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (41/41), done.\u001b[K\n",
+            "remote: Total 51 (delta 20), reused 6 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (51/51), done.\n",
+            "From https://github.com/ErickPower/CPSC501-Assignment4\n",
+            " * branch            master     -> FETCH_HEAD\n",
+            " * [new branch]      master     -> origin/master\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2lvJUf_ueuDV",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "1af6ef7f-a14d-4183-a79d-5b0a87203e7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "try:\n",
@@ -49,7 +88,15 @@
         "  pass"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TensorFlow 2.x selected.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -260,7 +307,7 @@
         "     class_names = check_args()\n",
         "     print(f\"--Load Model {sys.argv[2]}--\")\n",
         "     #Load the model that should be in sys.argv[2]\n",
-        "     model = None\n",
+        "     model = tf.keras.models.load_model(sys.argv[2])\n",
         "     print(f\"--Load Image {sys.argv[3]}--\")\n",
         "     img = plt.imread(sys.argv[3])\n",
         "     if np.amax(img.flatten()) > 1:\n",
@@ -272,9 +319,9 @@
         "def predict(model, class_names, img, true_label):\n",
         "    img = np.array([img])\n",
         "    #Replace these two lines with code to make a prediction\n",
-        "    prediction = [1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10]\n",
+        "    prediction = model.predict(img)#[1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10,1/10]\n",
         "    #Determine what the predicted label is\n",
-        "    predicted_label = 0\n",
+        "    predicted_label = np.argmax(prediction)\n",
         "    plot(class_names, prediction, true_label, predicted_label, img[0])\n",
         "    plt.show()\n",
         "main()"
@@ -304,6 +351,36 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iChIlhDVI_Ww",
+        "colab_type": "text"
+      },
+      "source": [
+        "Added \n",
+        "```\n",
+        "model = tf.keras.models.load_model(sys.argv[2])\n",
+        "```\n",
+        "To get model loading to work.\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "Added\n",
+        "```\n",
+        "prediction = model.predict(img)\n",
+        "```\n",
+        "To make a prediction on the **img**\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "Added\n",
+        "```\n",
+        "predicted_label = np.argmax(prediction)\n",
+        "```\n",
+        "To get the prediction index"
+      ]
     }
   ]
 }
