Added convolution and max pooling layers to model

--- a/part2/notMNISTStarter.ipynb
+++ b/part2/notMNISTStarter.ipynb
@@ -29,27 +29,31 @@
       "metadata": {
         "id": "EWyi3raC7pnn",
         "colab_type": "code",
+        "outputId": "2f9a4421-51b4-4535-af44-ee2a25abbf4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "2b7f4912-bbd8-4a94-873c-a9f3ad4f57eb"
+          "height": 170
+        }
       },
       "source": [
         "!git init\n",
         "!git remote add origin https://github.com/ErickPower/CPSC501-Assignment4.git\n",
         "!git pull origin master"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Reinitialized existing Git repository in /content/.git/\n",
-            "fatal: remote origin already exists.\n",
+            "Initialized empty Git repository in /content/.git/\n",
+            "remote: Enumerating objects: 59, done.\u001b[K\n",
+            "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (49/49), done.\u001b[K\n",
+            "remote: Total 59 (delta 26), reused 6 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (59/59), done.\n",
             "From https://github.com/ErickPower/CPSC501-Assignment4\n",
             " * branch            master     -> FETCH_HEAD\n",
-            "Already up to date.\n"
+            " * [new branch]      master     -> origin/master\n"
           ],
           "name": "stdout"
         }
@@ -60,7 +64,11 @@
       "metadata": {
         "id": "Z1o4PRH6KJuJ",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "3ceb988c-b995-40f5-d3ea-11be012eb6c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "try:\n",
@@ -71,7 +79,15 @@
         "  pass"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TensorFlow 2.x selected.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -102,10 +118,10 @@
       "metadata": {
         "id": "UmlX83--KT6M",
         "colab_type": "code",
-        "outputId": "1d140fac-5816-4040-c39f-050e7d04b056",
+        "outputId": "ce08473f-187f-4354-a975-78c6c758b5a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 413
         }
       },
       "source": [
@@ -124,7 +140,16 @@
         " \n",
         "print(\"--Make model--\")\n",
         "model = tf.keras.models.Sequential([\n",
-        "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+        "  #add layers from slide ~80\n",
+        "  tf.keras.layers.Conv2D(32, 3, activation='relu', input_shape=(28,28,3)),\n",
+        "  tf.keras.layers.MaxPooling2D(),\n",
+        "  tf.keras.layers.Conv2D(64, 3, activation='relu'),\n",
+        "  tf.keras.layers.MaxPooling2D(),\n",
+        "  tf.keras.layers.Conv2D(128, 3, activation='relu'),\n",
+        "  tf.keras.layers.MaxPooling2D(),\n",
+        "  #add layers from slide ~80\n",
+        "  #tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+        "  tf.keras.layers.Flatten(),\n",
         "  tf.keras.layers.Dense(600, activation='relu'),\n",
         "  tf.keras.layers.Dense(400, activation='relu'),\n",
         "  tf.keras.layers.Dense(200, activation='relu'),\n",
@@ -144,103 +169,44 @@
         "print(f\"Model Loss:    {model_loss:.2f}\")\n",
         "print(f\"Model Accuray: {model_acc*100:.1f}%\")"
       ],
-      "execution_count": 45,
+      "execution_count": 1,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
         {
           "output_type": "stream",
           "text": [
-            "--Get data--\n",
-            "--Process data--\n",
-            "60000\n",
-            "--Make model--\n",
-            "--Fit model--\n",
-            "Train on 60000 samples\n",
-            "Epoch 1/40\n",
-            "60000/60000 - 15s - loss: 0.5722 - accuracy: 0.8276\n",
-            "Epoch 2/40\n",
-            "60000/60000 - 15s - loss: 0.4265 - accuracy: 0.8693\n",
-            "Epoch 3/40\n",
-            "60000/60000 - 16s - loss: 0.3724 - accuracy: 0.8858\n",
-            "Epoch 4/40\n",
-            "60000/60000 - 15s - loss: 0.3272 - accuracy: 0.8978\n",
-            "Epoch 5/40\n",
-            "60000/60000 - 15s - loss: 0.2926 - accuracy: 0.9074\n",
-            "Epoch 6/40\n",
-            "60000/60000 - 15s - loss: 0.2625 - accuracy: 0.9167\n",
-            "Epoch 7/40\n",
-            "60000/60000 - 15s - loss: 0.2332 - accuracy: 0.9264\n",
-            "Epoch 8/40\n",
-            "60000/60000 - 15s - loss: 0.2074 - accuracy: 0.9332\n",
-            "Epoch 9/40\n",
-            "60000/60000 - 15s - loss: 0.1857 - accuracy: 0.9407\n",
-            "Epoch 10/40\n",
-            "60000/60000 - 15s - loss: 0.1626 - accuracy: 0.9481\n",
-            "Epoch 11/40\n",
-            "60000/60000 - 15s - loss: 0.1514 - accuracy: 0.9520\n",
-            "Epoch 12/40\n",
-            "60000/60000 - 15s - loss: 0.1371 - accuracy: 0.9565\n",
-            "Epoch 13/40\n",
-            "60000/60000 - 15s - loss: 0.1223 - accuracy: 0.9615\n",
-            "Epoch 14/40\n",
-            "60000/60000 - 15s - loss: 0.1098 - accuracy: 0.9654\n",
-            "Epoch 15/40\n",
-            "60000/60000 - 15s - loss: 0.1029 - accuracy: 0.9682\n",
-            "Epoch 16/40\n",
-            "60000/60000 - 15s - loss: 0.0958 - accuracy: 0.9699\n",
-            "Epoch 17/40\n",
-            "60000/60000 - 15s - loss: 0.0816 - accuracy: 0.9740\n",
-            "Epoch 18/40\n",
-            "60000/60000 - 16s - loss: 0.0775 - accuracy: 0.9761\n",
-            "Epoch 19/40\n",
-            "60000/60000 - 15s - loss: 0.0690 - accuracy: 0.9790\n",
-            "Epoch 20/40\n",
-            "60000/60000 - 15s - loss: 0.0649 - accuracy: 0.9797\n",
-            "Epoch 21/40\n",
-            "60000/60000 - 16s - loss: 0.0679 - accuracy: 0.9791\n",
-            "Epoch 22/40\n",
-            "60000/60000 - 15s - loss: 0.0580 - accuracy: 0.9821\n",
-            "Epoch 23/40\n",
-            "60000/60000 - 16s - loss: 0.0625 - accuracy: 0.9807\n",
-            "Epoch 24/40\n",
-            "60000/60000 - 16s - loss: 0.0565 - accuracy: 0.9826\n",
-            "Epoch 25/40\n",
-            "60000/60000 - 15s - loss: 0.0525 - accuracy: 0.9838\n",
-            "Epoch 26/40\n",
-            "60000/60000 - 15s - loss: 0.0487 - accuracy: 0.9856\n",
-            "Epoch 27/40\n",
-            "60000/60000 - 15s - loss: 0.0422 - accuracy: 0.9869\n",
-            "Epoch 28/40\n",
-            "60000/60000 - 15s - loss: 0.0442 - accuracy: 0.9864\n",
-            "Epoch 29/40\n",
-            "60000/60000 - 16s - loss: 0.0492 - accuracy: 0.9850\n",
-            "Epoch 30/40\n",
-            "60000/60000 - 16s - loss: 0.0348 - accuracy: 0.9892\n",
-            "Epoch 31/40\n",
-            "60000/60000 - 15s - loss: 0.0397 - accuracy: 0.9879\n",
-            "Epoch 32/40\n",
-            "60000/60000 - 15s - loss: 0.0388 - accuracy: 0.9883\n",
-            "Epoch 33/40\n",
-            "60000/60000 - 15s - loss: 0.0345 - accuracy: 0.9897\n",
-            "Epoch 34/40\n",
-            "60000/60000 - 15s - loss: 0.0372 - accuracy: 0.9889\n",
-            "Epoch 35/40\n",
-            "60000/60000 - 15s - loss: 0.0380 - accuracy: 0.9882\n",
-            "Epoch 36/40\n",
-            "60000/60000 - 15s - loss: 0.0346 - accuracy: 0.9900\n",
-            "Epoch 37/40\n",
-            "60000/60000 - 15s - loss: 0.0329 - accuracy: 0.9897\n",
-            "Epoch 38/40\n",
-            "60000/60000 - 16s - loss: 0.0287 - accuracy: 0.9915\n",
-            "Epoch 39/40\n",
-            "60000/60000 - 15s - loss: 0.0311 - accuracy: 0.9906\n",
-            "Epoch 40/40\n",
-            "60000/60000 - 15s - loss: 0.0286 - accuracy: 0.9913\n",
-            "--Evaluate model--\n",
-            "10000/1 - 1s - loss: 0.2345 - accuracy: 0.9448\n",
-            "Model Loss:    0.47\n",
-            "Model Accuray: 94.5%\n"
+            "--Get data--\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-f2e17daf8a95>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--Get data--\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"notMNIST.npz\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x_train'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'y_train'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x_test'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'y_test'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    426\u001b[0m         \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    427\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 428\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    429\u001b[0m         \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'notMNIST.npz'"
+          ]
         }
       ]
     },
@@ -331,11 +297,11 @@
       "metadata": {
         "id": "yccjHmKUJItY",
         "colab_type": "code",
+        "outputId": "094e3495-d140-4795-ba2c-752b59fa2709",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 873
-        },
-        "outputId": "094e3495-d140-4795-ba2c-752b59fa2709"
+        }
       },
       "source": [
         "predictions = model.predict(x_test)\n",
@@ -351,7 +317,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
